validate pdf file and content

--- a/userservice/pom.xml
+++ b/userservice/pom.xml
@@ -69,6 +69,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!-- Apache PDFBox (Apache License) for PDF content security-->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.27</version>
+        </dependency>
 	</dependencies>
     <dependencyManagement>
         <dependencies>
