create ai service, kafka communication

--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -5,9 +5,18 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/aiactivityfitness
       database: aiactivityfitness
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 server:
   port: 8082
+
+kafka:
+  topic:
+    name: activity-events
 
 eureka:
   client:
