--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -22,5 +22,8 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+  instance:
+    prefer-ip-address: true
+
 server:
   port: 8081
