--- a/userservice/pom.xml
+++ b/userservice/pom.xml
@@ -75,6 +75,10 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.27</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
 	</dependencies>
     <dependencyManagement>
         <dependencies>
