--- a/configserver/src/main/resources/config/ai-service.yml
+++ b/configserver/src/main/resources/config/ai-service.yml
@@ -24,6 +24,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+  instance:
+    prefer-ip-address: true
+
 # separate, non-spring kafka app settings
 kafka:
   topic:
